--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,12 +6,13 @@
     "configurations": [
         {
             "name": "Launch Program",
-            "program": "${workspaceFolder}/app.js",
+            "program": "${workspaceFolder}/pages/index.js",
             "request": "launch",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "type": "node"
+            "type": "node",
+            "url": "http://localhost:3000"
         },
         {
             "name": "Launch via NPM",
@@ -24,14 +25,16 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "type": "node"
+            "type": "node",
+            "url": "http://localhost:3000"
+            
         },
         {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}/pages/index.js"
         }
     ]
 }
