--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "next",
     "dev:watch": "next-remote-watch ./posts",
     "build": "next build && start http://localhost:3000 && npm run dev",
-    "start": "next start && start http://localhost:3000 && npm run dev",
+    "start": "next build && next start && start http://localhost:3000 && npm run dev",
     "export": "next build && next export",
     "lint": "next lint"
   },
